feat: mail service

--- a/medconnect-be/src/main/resources/templates/email/appointment-confirmation.html
+++ b/medconnect-be/src/main/resources/templates/email/appointment-confirmation.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 style="margin: 0;">✅ Đặt lịch thành công!</h1>
+        <h1 style="margin: 0;">Đặt lịch thành công!</h1>
     </div>
     
     <div class="content">
@@ -79,19 +79,19 @@
         
         <div class="appointment-card">
             <div class="info-row">
-                <span class="label">👨‍⚕️ Bác sĩ:</span>
+                <span class="label">Bác sĩ:</span>
                 <span class="value">BS. {{doctorName}}</span>
             </div>
             <div class="info-row">
-                <span class="label">🏥 Chuyên khoa:</span>
+                <span class="label">Chuyên khoa:</span>
                 <span class="value">{{specialization}}</span>
             </div>
             <div class="info-row">
-                <span class="label">📅 Ngày khám:</span>
+                <span class="label">Ngày khám:</span>
                 <span class="value">{{appointmentDate}}</span>
             </div>
             <div class="info-row">
-                <span class="label">🕐 Giờ khám:</span>
+                <span class="label">Giờ khám:</span>
                 <span class="value">{{appointmentTime}}</span>
             </div>
         </div>
@@ -104,7 +104,7 @@
         </ul>
         
         <div style="text-align: center;">
-            <a href="https://medconnect.app/nguoi-dung/lich-hen" class="button">Xem lịch hẹn</a>
+            <a href="https://localhost:3000/nguoi-dung/lich-hen" class="button">Xem lịch hẹn</a>
         </div>
     </div>
     
