--- a/medconnect-be/src/main/resources/templates/email/appointment-reminder.html
+++ b/medconnect-be/src/main/resources/templates/email/appointment-reminder.html
@@ -51,9 +51,9 @@
         <p>Đây là lời nhắc về lịch khám sắp tới của bạn tại <strong>MedConnect</strong>:</p>
         
         <div class="reminder-card">
-            <p><strong>👨‍⚕️ Bác sĩ:</strong> BS. {{doctorName}}</p>
-            <p><strong>📅 Ngày khám:</strong> {{appointmentDate}}</p>
-            <p><strong>🕐 Giờ khám:</strong> {{appointmentTime}}</p>
+            <p><strong>Bác sĩ:</strong> BS. {{doctorName}}</p>
+            <p><strong>Ngày khám:</strong> {{appointmentDate}}</p>
+            <p><strong>Giờ khám:</strong> {{appointmentTime}}</p>
         </div>
         
         <p>Chúng tôi mong được gặp bạn!</p>
